log/build_2025-04-23_18-13-54/p2_kf_adr/stderr.log
  File "/home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/python3.10/site-packages/p2_kf_adr/kf_estimation.py", line 131
    q = quaternion_from_euler(0, 0, float(yaw)
                             ^
SyntaxError: '(' was never closed

